removed the entire media stylins for max-width 28em. The vh styling on the elements prevent vertical overflow.

--- a/design.css
+++ b/design.css
@@ -58,12 +58,6 @@ div.typevalue>h4 {font-size: 3vh;}
  
 div.numbervalue>p {font-size: 5.5vh; text-indent: .7em;}
  
-@media all and (max-width: 28em) {
-  
-  div.typevalue>h4 {font-size: 5.3vw;}
-  div.numbervalue>p {font-size: 10vw;}
-}
- 
 input[type="number"] {
   background-color: transparent;
   background: radial-gradient(#96ffc7, transparent, transparent);
